# RSS_Local_Voting

./: .gitignore  LICENSE  README.md  TulsaCounty.py  browser.py  config.py  email_delivery.py  main.py  pyproject.toml  screenshot.py  send_notifications.py  settings_example.toml  sqlite3_db.py  terminator.py  time_keeper.py
