[project]
name = "voter-reg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apprise>=1.9.0",
    "dynaconf>=3.2.6",
    "mailjet-rest>=1.3.4",
    "psutil>=6.1.0",
    "pyautogui>=0.9.54",
    "selenium>=4.26.0",
    "sendgrid>=6.11.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
